examples/negative/type_errors/L2/9_var_bool_low_lim_for.ob
MODULE BoolLowLimFor;

VAR x,y: INTEGER;
    l: BOOLEAN;

BEGIN
  x := 42;
  l := TRUE;
  FOR y := l TO 10 DO
    x := x + 1
  END
END BoolLowLimFor.
